--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,9 +8,10 @@ readme = "README.md"
 [tool.poetry.dependencies]
 python = "^3.12"
 django = "^5.0.5"
-environ = "^1.0"
 ruff = "^0.4.3"
 django-environ = "^0.11.2"
+psycopg = "^3.1.19"
+psycopg2-binary = "^2.9.9"
 
 
 [build-system]
