--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,8 @@
 DJANGO__ALLOWED_HOSTS=site.local.homework.net,localhost,127.0.0.1
 
-POSTGRES_HOST=localhost
-POSTGRES_PORT=45001
+POSTGRES_HOST=postgres
+POSTGRES_PORT=53421
 
-POSTGRES_DB="MyDb"
-POSTGRES_USER="grayfog"
-POSTGRES_PASSWORD="md550c6e876243b676e19aa3a98d713ccd1"
+POSTGRES_DB='mydb'
+POSTGRES_USER='grayfog'
+POSTGRES_PASSWORD='SEzHcAz73degvDxh36BypFePXsTBJKWY'
