helll ya, its workdssss

--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,9 @@
-DJANGO__ALLOWED_HOSTS=site.local.homework.net,localhost,127.0.0.1
+DJANGO__ALLOWED_HOSTS=site.homework.local.net,localhost,127.0.0.1
 
-POSTGRES_HOST=postgres
+POSTGRES_HOST=locahost
 POSTGRES_PORT=53421
 
 POSTGRES_DB='mydb'
 POSTGRES_USER='grayfog'
 POSTGRES_PASSWORD='SEzHcAz73degvDxh36BypFePXsTBJKWY'
+
