--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
 DJANGO__ALLOWED_HOSTS=site.homework.local.net,localhost,127.0.0.1
 
-POSTGRES_HOST=locahost
+POSTGRES_HOST=localhost
 POSTGRES_PORT=53421
 
 POSTGRES_DB='mydb'
