--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,8 @@ django-environ = "^0.11.2"
 psycopg = "^3.1.19"
 psycopg2-binary = "^2.9.9"
 sympy = "^1.12"
+djangorestframework = "^3.15.1"
+django-cors-headers = "^4.3.1"
 
 
 [build-system]
