--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,8 @@ django==5.0.5
 django-environ==0.11.2
 psycopg==3.1.19
 psycopg2-binary==2.9.9
+djangorestframework==3.15.1
+django-cors-headers==4.3.1
 
 #Linters/
 ruff==0.4.3
